<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
<LinearLayout android:id="@+id/setup_ll"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
   
    <EditText android:id="@+id/serverip_et" 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/server_ip"
        android:text="@string/default_ip"/>
    <EditText android:id="@+id/port_et"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/server_port"
        android:text="@string/default_port"/>
    <Button android:id="@+id/connect_bt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/connect"/>
</LinearLayout>

<FrameLayout android:id="@+id/touchpad_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:visibility="gone">
    <ImageView android:id="@+id/touchpoint_iv"
        android:layout_width="50dip"
        android:layout_height="50dip"
        android:visibility="gone"
        android:scaleType="fitXY"
        android:src="@drawable/ic_launcher"/>
</FrameLayout>

</FrameLayout>